# tambourine-voice

./: .gitignore  DESIGN.md  docker-compose.mac.yml
.agents/skills/daily/: SKILL.md
app/: package.json  pnpm-lock.yaml
app/src/: App.tsx  app-main.css
app/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
app/src-tauri/helpers/: calendar_helper.swift  meeting_recorder
app/src-tauri/src/: config_sync.rs  events.rs  lib.rs  memory.rs  settings.rs
app/src-tauri/src/calendar/: mod.rs
app/src-tauri/src/commands/: export_import.rs  history.rs  memory.rs  mod.rs  settings.rs  text.rs
app/src-tauri/src/system_audio/: mod.rs
app/src/components/: MeetingsSection.tsx  SpeakerMapping.tsx  UpcomingMeetings.tsx
app/src/components/settings/: PromptSettings.tsx
app/src/hooks/: useMeetingNotifications.ts
app/src/lib/: events.ts  queries.ts  safeSendClientMessage.test.ts  safeSendClientMessage.ts  tauri.ts
app/src/stores/: meetingStore.ts
docs/: memory-design-ideas.md  sdk-feasibility-rfc.md
server/: .env.example  Dockerfile  batch_process_meetings.py  main.py  pyproject.toml
server/api/: config_api.py  meeting_api.py
server/config/: settings.py
server/processors/: configuration.py  llm.py  llm_gate.py  meeting_summarizer.py  meeting_transcriber.py
server/protocol/: providers.py
server/services/: provider_registry.py
server/tests/: test_provider_selection_parsing.py
tools/: record_meeting.sh
tools/parakeet-service/: Dockerfile  app.py  run.sh
tools/sckit-poc/: Cargo.toml
tools/sckit-poc/src/: main.rs
